--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Minimal Mistakes"
+title                    : "산의 노트"
 title_separator          : "-"
 subtitle                 : "A Jekyll theme"
 name                     : &name "Michael Rose" # &name is a YAML anchor which can be *referenced later
